feat(api): add pluggable interface to report changes to third-party system (#55)
Fixes: #55